@@ -29,7 +29,7 @@ package ifneeded vfs        @PACKAGE_VERSION@ [list loadvfs $vfs::dll]
 # Allow optional redirect of VFS_LIBRARY components.  Only necessary
 # for testing, but could be used elsewhere.
 if {[info exists ::env(VFS_LIBRARY)]} { set dir $::env(VFS_LIBRARY) }
-package ifneeded starkit    1.3.1 [list source [file join $dir starkit.tcl]]
+package ifneeded starkit    1.3.2 [list source [file join $dir starkit.tcl]]
 package ifneeded vfslib     1.3.1 [list source [file join $dir vfslib.tcl]]
 
 # Old
