@@ -1,3 +1,15 @@
+2008-04-11  Andreas Kupries  <andreask@activestate.com>
+
+	* library/pkgIndex.tcl: Bumped version of starkit to 1.3.2. We
+	* library/starkit.tcl: should have done that when we synchronized
+	* pkgIndex.tcl.in: the mismatched version on 2005-11-09 anyway,
+	because it was a bugfix, with attendant change to the version
+	number. Without this bump we now have 1.3.1 floating around in two
+	variants, i.e. it may or may not be mismatched with its package
+	index, and the two variants cannot be distinguished. By bumping
+	the patchlevel the correct version would have been easy to
+	distinguish. Now it will.
+
 2008-04-08  Pat Thoyts  <patthoyts@users.sourceforge.net>
 
 	* configure:    If building static then do not define USE_TCL_STUBS
